# python-project-50

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: gendiff_check.yml
gendiff/: compartion.py  formater.py  gendiff.py  generate_diff.py  parser.py
gendiff/formatters/: formater.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: __init__.py  test_compare_file.py  test_generate_diff.py
tests/fixtures/: expected_value_for_example.txt  expected_value_for_json.txt  expected_value_for_plain.txt  file2.yml
