[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "second hexlet project"
authors = ["Sergey Kholodetskiy <sergh.yanovskiy@inbox.ru>"]
repository = "https://github.com/YanovskiyS/python-project-50.git"
readme = "README.md"
packages = [
  { include = "gendiff" },
]
classifiers = [
  "Topic :: Education"
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.11"
pytest-cov = "^4.1.0"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
